Fixed layout bug in button

--- a/pyrene/src/components/Button/button.css
+++ b/pyrene/src/components/Button/button.css
@@ -2,6 +2,7 @@
 
 .buttonContainer {
   position: relative;
+  display: inline-block;
 
   & .loader {
     position: absolute;
